--- a/index.html
+++ b/index.html
@@ -1,100 +1,34 @@
 ---
 ---
-<html>
-<head>
-	<title></title>
-</head>
-<body>
-<h1>Welcome to ScrumSeeker.com</h1>
+#Welcome to ScrumSeeker.com
 
-<p>This space will emerge as a scrum team forms.</p>
+This space will emerge as a scrum team forms.
 
-<h2>Scrum Team</h2>
+##Scrum Team
 
-<p>The scrum team shall be made up of those who want to participate.</p>
+The scrum team shall be made up of those who want to participate.
 
-<table border="0" cellpadding="1" cellspacing="1" style="background-color:lightgray;width:500px;" summary="Members of the team">
-	<caption><strong>Scrum Team Members</strong></caption>
-	<thead>
-		<tr>
-			<th scope="col">Person</th>
-			<th scope="col">Role</th>
-			<th scope="col">Contact</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td>Rob Falla</td>
-			<td>Product Onwer</td>
-			<td style="text-align: center;">rob@scrumseeker.com</td>
-		</tr>
-		<tr>
-			<td>?</td>
-			<td>Scrum Master</td>
-			<td style="text-align: center;">?</td>
-		</tr>
-		<tr>
-			<td>?</td>
-			<td>Developer</td>
-			<td style="text-align: center;">?</td>
-		</tr>
-		<tr>
-			<td>?</td>
-			<td>Developer</td>
-			<td style="text-align: center;">?</td>
-		</tr>
-		<tr>
-			<td>?</td>
-			<td>Developer</td>
-			<td style="text-align: center;">?</td>
-		</tr>
-		<tr>
-			<td>?</td>
-			<td>Developer</td>
-			<td style="text-align: center;">?</td>
-		</tr>
-		<tr>
-			<td>?</td>
-			<td>Developer</td>
-			<td style="text-align: center;">?</td>
-		</tr>
-	</tbody>
-</table>
 
-<h2>Vision</h2>
+	||__Scrum Team Members__||
+	|_Person_|_Role_|_Contact_|
+	|Rob Falla|Product Onwer|rob@scrumseeker.com|
+	|?|Scrum Master|?|
+	|Mel Pullen|Developer|mel@scrumit.co.uk|
+	|?|Developer|?|
+	|?|Developer|?|
+	|?|Developer|?|
 
-<p>A place where scrum practitioners who currently do not have a team can come to share experiences and support and continue to scrum until a new opportunity arises.</p>
 
-<h2>Backlog</h2>
+##Vision
 
-<p>To be completed as Scrum Team emerges</p>
+A place where scrum practitioners who currently do not have a team can come to share experiences and support and continue to scrum until a new opportunity arises.
 
-<table align="center" border="1" cellpadding="1" cellspacing="1" style="width:500px;">
-	<caption>Scrumseeker.com backlog</caption>
-	<thead>
-		<tr>
-			<th scope="col">ID</th>
-			<th scope="col">Title</th>
-			<th scope="col">Size</th>
-			<th scope="col">Done</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td>ssk1</td>
-			<td>Find a Scrum Team</td>
-			<td>1 day</td>
-			<td>&nbsp;</td>
-		</tr>
-		<tr>
-			<td>ssk2</td>
-			<td>Refine vision with Scrum Team</td>
-			<td>2 hrs</td>
-			<td>&nbsp;</td>
-		</tr>
-	</tbody>
-</table>
+##Backlog
 
-<p>&nbsp;</p>
-</body>
-</html>
+To be completed as Scrum Team emerges
+
+	__Scrumseeker.com backlog__
+	|ID|Title|Size|Done|
+	|ssk1|Find a Scrum Team|1 day||
+	|ssk2|Refine vision with Scrum Team|2 hrs||
+	
