add logo reference
The existing home page now has a logo.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
----
+The---
 ---
 #Welcome to ScrumSeeker.com
 
@@ -6,7 +6,7 @@ This space will emerge as a scrum team forms.
 
 ##Scrum Team
 
-The scrum team shall be made up of those who want to participate.
+The scrum team shall be made up of those who want to participate.   !http://scrumseeker.com/SmallLogo.png!
 
 
 	||__Scrum Team Members__||
